--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Team Nexus",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.2",
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
